# TT-dip-pin-prj-adv-ocrroo-2025

./: README.md  main.py  pyproject.toml  rgb-color-dector.py
.github/: pull_request.md
.github/templates/: bug_report.yml  pull_request.yml
.github/workflows/: pylint.yml
design/: Adv_Programming_Persona.docx  design-evidencing-guide (1).md  design-evidencing-guide.md  ~$v_Programming_Persona.docx
docs/: CONTRIBUTION.md
preliminary/: library_basics.py  llm_runner.py  performance_tasks.md  simple_api.py
src/: output.css
templates/: base.html
templates/pages/: index.html  ocr.html
